<resources>
    <string name="app_name">Кто хочет стать \nсупер-миллионером?</string>
    <string name="buttonHelpHint">Подсказка</string>
    <string name="textViewHelpHint">Попробуйте воспользоваться подсказкой:</string>
    <string name="textViewFailTitle">Неверно</string>
    <string name="textViewFailSubTitle">Ваш ответ:</string>
    <string name="selectedAnswer">SelectedAnswer</string>
    <string name="buttonRestartByFail">Начать заново</string>
    <string name="buttonRetry">Попытаться ответить ещё раз</string>
    <string name="gameTitle">Кто хочет стать \nсупер-миллионером?</string>
    <string name="buttonStart">Играть</string>
    <string name="buttonFifty">Fifty fifty</string>
    <string name="buttonHallHelp">Hall help</string>
    <string name="buttonFiftyHelp">Fifty fifty</string>
    <string name="buttonCallHelp">Call help</string>
    <string name="buttonChanceHelp">Это ваш спасательный круг, если вы ответите неверно</string>
    <string name="imageViewMain">Who want to be a super millionaire</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
    <string name="textReward">Text reward</string>
    <string name="textQuestion">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="buttonHint">Подсказка</string>
    <string name="buttonRestart">Продолжить</string>
    <string name="win">Победа!</string>
    <string name="voitingResultTitle">Результаты голосования:</string>
    <string name="textTimer">00:30</string>
    <string name="timeoutDialogTitle">Время истекло</string>
    <string name="timeoutDialogButton">Начать новую игру</string>
    <string name="timeoutDialogCorrectAnswer">Верный ответ:\n</string>
</resources>