<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <Button
        android:id="@+id/buttonHelpHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonHelpHint"
        app:layout_constraintBottom_toTopOf="@+id/buttonRestartByFail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHelpHint"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/textViewFailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/textViewFailTitle"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/textViewFailSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewFailSubTitle"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFailTitle"
        app:layout_constraintVertical_bias="0.160" />

    <TextView
        android:id="@+id/selectedAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectedAnswer"
        android:textColor="#FF0000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFailSubTitle"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/buttonRestartByFail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:text="@string/buttonRestartByFail"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.910" />

    <TextView
        android:id="@+id/textViewHelpHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewHelpHint"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRestartByFail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedAnswer"
        app:layout_constraintVertical_bias="0.300" />

    <Button
        android:id="@+id/buttonRetry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorAccent"
        android:text="@string/buttonRetry"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonRestartByFail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>